--- a/clasificacion.html
+++ b/clasificacion.html
@@ -21,7 +21,7 @@
             </ul>
         </nav>
     </header>
-
+    <h2>ACIERTOS DE CADA CATEGORÍA</h2>
     <div role="table" aria-label="Puntuaciones" aria-describedby="tabla-puntuaciones-desc">
         <!-- Descripción accesible -->
         <div id="tabla-puntuaciones-desc" style="display: none;">
