--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Presentación del juego -->
     <section id="presentacion" class="presentacion-section">
-        <h2>Bienvenidos a Ponte a Prueba</h2> <br>
+        <h2>Bienvenido a Ponte a Prueba</h2> <br>
         <p>Prepárate para poner a prueba tu conocimiento con este juego interactivo de trivia. Puedes elegir entre varias categorías o jugar preguntas aleatorias para desafiarte a ti mismo. ¡Compite con otros y demuestra quién sabe más!</p>
     </section>
 
@@ -33,21 +33,21 @@
         <p>Elige una categoría de trivia y responde las preguntas. Gana puntos por cada respuesta correcta. ¡Acumula el máximo puntaje!</p>
     </section>
 
-    <!-- Botón de preguntas revueltas 
+    
     <section id="preguntas-revueltas" class="revueltas-section">
-        <h2>¿Listo para un desafío?</h2> <br>
-        <button onclick="randomTrivia()">Jugar Preguntas Revueltas</button>
-    </section>-->
+        <h2>¿Listo para un desafío?</h2>
+        <p>Si no te decides qué categoría escoger, te tenemos preguntas de diferentes categorías.</p><br>
+        <button onclick="window.location.href='preguntas-variadas.html'">Jugar Preguntas Revueltas</button>
+    </section>
 
     <section id="categorias" class="categorias-section">
         <h2>Categorías de Trivia</h2> <br>
         <div class="categorias-container">
             <button class="categoria" onclick="window.location.href='cultura-general.html'">Cultura General</button>
             <button class="categoria" onclick="window.location.href='adivinanzas.html'">Adivinanzas</button>
-            <!--<button class="categoria" onclick="window.location.href=''">Música</button>
-            <button class="categoria" onclick="window.location.href=''">Deportes</button>
-            <button class="categoria" onclick="window.location.href=''">Geografía</button>
-            <button class="categoria" onclick="window.location.href=''">Tecnología</button>-->
+            <button class="categoria" onclick="window.location.href='musica.html'">Música</button>
+            <button class="categoria" onclick="window.location.href='geografia.html'">Geografía</button>
+            <button class="categoria" onclick="window.location.href='tecnologia.html'">Tecnología</button>
         </div>
     </section>
 
