--- a/sugerencias.html
+++ b/sugerencias.html
@@ -64,15 +64,15 @@
 
 
     <main>
+        <h2>DANOS TU SUGERENCIA PARA LA PÁGINA</h2>
         <form id="sugerencias-form">
             <label for="nombre">Nombre:</label>
-            <input type="text" id="nombre" required placeholder="Tu nombre">
-
+            <input type="text" id="nombre" required placeholder="Ejem. Sergio Pérez">
             <label for="correo">Correo Electrónico:</label>
-            <input type="email" id="correo" required placeholder="Tu correo electrónico">
+            <input type="email" id="correo" required placeholder="Ejem. sergioperez@gmail.com">
 
             <label for="sugerencia">Sugerencia:</label>
-            <textarea id="sugerencia" rows="4" required placeholder="Escribe tu sugerencia aquí..."></textarea>
+            <textarea id="sugerencia" rows="4" required placeholder="Les sugiero que agreguen o cambien..."></textarea>
 
             <button type="submit">Enviar Sugerencia</button>
         </form>
