--- a/clasificacion.html
+++ b/clasificacion.html
@@ -21,11 +21,14 @@
             </ul>
         </nav>
     </header>
-    <h2>ACIERTOS DE CADA CATEGORÍA</h2>
-    <div role="table" aria-label="Puntuaciones" aria-describedby="tabla-puntuaciones-desc">
+    <section class="indicaciones">
+    <h3>ACIERTOS DE CADA CATEGORÍA</h3>
+    <p>En la siguiente tabla se indica los aciertos de cada categoría que respondiste, cada que completes una categoría se va a ir agregando a la tabla.</p>
+    </section>
+   <div role="table" aria-label="Puntuaciones" aria-describedby="tabla-puntuaciones-desc">
         <!-- Descripción accesible -->
         <div id="tabla-puntuaciones-desc" style="display: none;">
-            Tabla que muestra la categoría, la cantidad de respuestas correctas y el total de preguntas respondidas.
+            Se indica la categoría, la cantidad de respuestas correctas y el total de preguntas respondidas.
         </div>
 
         <!-- Grupo de encabezados -->
