--- a/sugerencias.html
+++ b/sugerencias.html
@@ -62,9 +62,11 @@
         </nav>
     </header>
 
-
     <main>
-        <h2>DANOS TU SUGERENCIA PARA LA PÁGINA</h2>
+        <section class="sugerencia">
+        <h2>SUGERENCIAS</h2>
+        <p>Nos encantaría saber tu opinión o sugerencia acerca de nuestras preguntas de trivia, escribe lo que gustes y estaremos al tanto. Gracias por jugar.</p>
+        </section>
         <form id="sugerencias-form">
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" required placeholder="Ejem. Sergio Pérez">
