--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 
     <!-- Cómo jugar -->
     <section id="instrucciones" class="instrucciones-section">
-        <h2>¿Cómo Jugar?</h2><br>
+        <h3>¿Cómo Jugar?</h3>
         <p>Elige una categoría de trivia y responde las preguntas. Gana puntos por cada respuesta correcta. ¡Acumula el máximo puntaje!</p>
     </section>
 
     
     <section id="preguntas-revueltas" class="revueltas-section">
-        <h2>¿Listo para un desafío?</h2>
+        <h3>¿Listo para un desafío?</h3>
         <p>Si no te decides qué categoría escoger, te tenemos preguntas de diferentes categorías.</p><br>
         <button onclick="window.location.href='preguntas-variadas.html'">Jugar Preguntas Revueltas</button>
     </section>
 
     <section id="categorias" class="categorias-section">
-        <h2>Categorías de Trivia</h2> <br>
+        <h3>Categorías de Trivia</h3>
         <div class="categorias-container">
             <button class="categoria" onclick="window.location.href='cultura-general.html'">Cultura General</button>
             <button class="categoria" onclick="window.location.href='adivinanzas.html'">Adivinanzas</button>
