--- a/cultura-general.html
+++ b/cultura-general.html
@@ -9,6 +9,7 @@
 <body>
     
     <header>
+        <h1>PONTE A PRUEBA</h1>
         <div class="banner">
             <img src="Trivia Banner.jpg" alt="" class="banner-img">
         </div>
