--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <header>
+        <h1>PONTE A PRUEBA</h1>
         <div class="banner">
             <img src="Trivia Banner.jpg" alt="" class="banner-img">
         </div>
+    
         <nav>
             <ul class="nav-menu">
                 
