--- a/adivinanzas.html
+++ b/adivinanzas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <h1>PONTE A PRUEBA</h1>
         <div class="banner">
             <img src="Trivia Banner.jpg" alt="" class="banner-img">
         </div>
