--- a/sugerencias.html
+++ b/sugerencias.html
@@ -50,6 +50,7 @@
     </style>
 
     <header>
+        <h1>PONTE A PRUEBA</h1>
         <div class="banner">
             <img src="Trivia Banner.jpg" alt="" class="banner-img">
         </div>
